[gd_scene load_steps=13 format=3 uid="uid://bty8kpmn8dl28"]

[ext_resource type="Script" path="res://scripts/pause_menu_manager.gd" id="1_1jxsv"]
[ext_resource type="Texture2D" uid="uid://vjafvv7sa1pe" path="res://assets/sprites/TitleDarkBG.png" id="1_p01r6"]
[ext_resource type="Theme" uid="uid://mxtkyouf7edq" path="res://assets/UI themes/pause_menu_big.tres" id="2_mko1u"]
[ext_resource type="Theme" uid="uid://cqwim0eqpba2u" path="res://assets/UI themes/pause_menu.tres" id="4_feath"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsvan"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_udffk"]
texture = ExtResource("1_p01r6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6on5e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cwgok"]

[sub_resource type="Animation" id="Animation_u16w7"]
resource_name = "FadeInPauseMenu"
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeMask:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeMask/PausedText:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-669.117, -0.25, 0, 0.4, 102.712, 240, -0.7, 110.723, 0.0465082, -7.35648, 240.253, -0.125, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 0.8)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeMask/ContinueGame:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2, 0),
"points": PackedFloat32Array(1400, -0.25, 0, 0.25, 0, 400, -0.430964, 205.593, 0.0999999, -47.7053, 400, -0.125, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 0.8)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FadeMask/QuitGame:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1150, -0.25, 0, 0.25, 0, 543.453, -0.216467, 154.431, 0.0757249, -54.0233, 543.453, -0.0671854, -1.41785, 0.25, 0, 544, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.7, 0.8)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FadeMask/BackToMenu:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1250, -0.25, 0, 0.25, 0, 464, -0.4, 13.2697, 0.111513, -3.69935, 464, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 0.8)
}

[sub_resource type="Animation" id="Animation_pyj1a"]
resource_name = "FadeOutPauseMenu"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeMask:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeMask/ContinueGame:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(400, -0.25, 0, 0.466667, -2.05536, 1400, -0.366667, 2.23816, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeMask/QuitGame:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(544, -0.25, 0, 0.466667, 0.797729, 1400, -0.366667, -0.61499, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FadeMask/BackToMenu:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(464, -0.25, 0, 0.466667, -2.05536, 1400, -0.366667, 2.23816, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FadeMask/PausedText:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(240.253, -0.25, 0, 0.5, -2.08293, -600, -0.5, 2.21033, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_61edf"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeMask:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeMask/PausedText:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(240, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeMask/ContinueGame:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(400, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FadeMask/QuitGame:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(528, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FadeMask/BackToMenu:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(464, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bq2uh"]
_data = {
&"FadeInPauseMenu": SubResource("Animation_u16w7"),
&"FadeOutPauseMenu": SubResource("Animation_pyj1a"),
&"RESET": SubResource("Animation_61edf")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1jxsv")

[node name="FadeMask" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rsvan")

[node name="BlackFade" type="Panel" parent="FadeMask"]
z_index = -5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausedText" type="RichTextLabel" parent="FadeMask"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mko1u")
bbcode_enabled = true
text = "[wave amp=50.0 freq=2.0 connected=1][center]P a u s e d[/center][/wave]"

[node name="DarkBG" type="Panel" parent="FadeMask"]
z_index = -4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1087.0
offset_top = -471.0
offset_right = 1080.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_udffk")

[node name="ContinueGame" type="Button" parent="FadeMask"]
texture_filter = 6
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -140.0
offset_right = 66.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(65, 16)
theme_override_styles/focus = SubResource("StyleBoxEmpty_6on5e")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cwgok")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="FadeMask/ContinueGame"]
z_index = -3
layout_mode = 0
offset_left = -4.0
offset_right = 336.0
offset_bottom = 85.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme = ExtResource("4_feath")
bbcode_enabled = true
text = "[wave amp=50.0 freq=2.0 connected=1][center]CONTINUE[/center][/wave]"

[node name="QuitGame" type="Button" parent="FadeMask"]
texture_filter = 6
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -12.0
offset_right = 66.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(65, 16)
theme_override_styles/focus = SubResource("StyleBoxEmpty_6on5e")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cwgok")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="FadeMask/QuitGame"]
z_index = -3
layout_mode = 0
offset_left = -10.0
offset_top = -2.0
offset_right = 250.0
offset_bottom = 83.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme = ExtResource("4_feath")
bbcode_enabled = true
text = "[wave amp=50.0 freq=2.0 connected=1][center]QUIT[/center][/wave]"

[node name="BackToMenu" type="Button" parent="FadeMask"]
texture_filter = 6
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -76.0
offset_right = 66.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(65, 16)
theme_override_styles/focus = SubResource("StyleBoxEmpty_6on5e")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cwgok")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="FadeMask/BackToMenu"]
z_index = -3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -16.0
offset_right = 239.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme = ExtResource("4_feath")
bbcode_enabled = true
text = "[wave amp=50.0 freq=2.0 connected=1][center]TO MENU[/center][/wave]"

[node name="PauseMenuAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bq2uh")
}

[connection signal="mouse_entered" from="FadeMask/ContinueGame" to="." method="_on_continue_game_mouse_entered"]
[connection signal="mouse_exited" from="FadeMask/ContinueGame" to="." method="_on_continue_game_mouse_exited"]
[connection signal="pressed" from="FadeMask/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="mouse_entered" from="FadeMask/QuitGame" to="." method="_on_quit_game_mouse_entered"]
[connection signal="mouse_exited" from="FadeMask/QuitGame" to="." method="_on_quit_game_mouse_exited"]
[connection signal="pressed" from="FadeMask/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="mouse_entered" from="FadeMask/BackToMenu" to="." method="_on_back_to_menu_mouse_entered"]
[connection signal="mouse_exited" from="FadeMask/BackToMenu" to="." method="_on_back_to_menu_mouse_exited"]
[connection signal="pressed" from="FadeMask/BackToMenu" to="." method="_on_back_to_menu_pressed"]
